--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,15 @@ dependencies {
   compile 'com.google.android.gms:play-services-gcm:8.4.0'
   compile 'com.squareup.okhttp:okhttp:2.5.0'
   compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
+  compile 'com.nineoldandroids:library:2.4.0'
   compile 'com.jakewharton:butterknife:7.0.1'
   apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
   compile 'net.simonvt.schematic:schematic:0.6.3'
   compile 'com.melnykov:floatingactionbutton:1.2.0'
   compile 'com.squareup.okhttp:okhttp:2.5.0'
   compile 'com.android.support:design:23.2.1'
+  compile 'com.github.blackfizz:eazegraph:1.2.2@aar'
+  compile 'com.lsjwzh:materialloadingprogressbar:0.5.6-RELEASE'
   compile 'com.diogobernardino:williamchart:2.2'
   compile 'com.android.support:support-v4:23.2.1'
   compile('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
